--- a/obioma-online/package.json
+++ b/obioma-online/package.json
@@ -28,8 +28,10 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "fontawesome": "^4.7.2",
+    "jquery": "^3.3.1",
     "ngx-cookie-service": "^1.0.10",
     "ngx-toastr": "^8.4.0",
+    "popper.js": "^1.14.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
