--- a/obioma-online/package.json
+++ b/obioma-online/package.json
@@ -33,6 +33,7 @@
     "ngx-toastr": "^8.4.0",
     "popper.js": "^1.14.3",
     "rxjs": "^5.5.6",
+    "scroll-triggers": "^3.16.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
